# Strava_project

./: README.md  activities_csv.py  create_json_gpx.py  ficheros.txt  poblacions.py  pyproject.toml  script_principal.py
